feat: changed the package name

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,10 @@
+/Account.class
+/BankAccount.class
+/BankTransactionSystemGUI$1.class
+/BankTransactionSystemGUI.class
+/DatabaseAdapter.class
+/TransactionHandler.class
 /TransactionResult.class
+/User.class
+/bank_system.sqlite
+/bank_system/
