--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="/Users/admin/Desktop/java-json.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
