--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/Users/admin/Desktop/java-json.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Downloads/java-json.jar (1)/java-json.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
